--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -242,7 +242,7 @@ jobs:
 
 
   tests-manylinux:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
     needs: [validate-input, build-wheels, test-setup]
     if: |
       always()
@@ -252,15 +252,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        os: ["ubuntu-22.04", "ubuntu-22.04-arm"]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
-        arch: ['x86_64', 'aarch64']
         api: ["acouchbase", "couchbase"]
     steps:
-      - name: Set up QEMU
-        if: ${{ matrix.arch == 'aarch64' }}
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -275,20 +270,119 @@ jobs:
       - name: Download wheel
         uses: actions/download-artifact@v4
         with:
-          name: pycbcc-artifact-manylinux-${{ matrix.arch }}-python${{ matrix.python-version }}-wheel
+          name: pycbcc-artifact-manylinux-${{ matrix.os == 'ubuntu-22.04-arm' && 'aarch64' || 'x86_64' }}-python${{ matrix.python-version }}-wheel
           run-id: ${{ inputs.wheels_run_id != '' && inputs.wheels_run_id || needs.build-wheels.outputs.workflow_run_id }}
           github-token: ${{ github.token }}
           path: pycbcc
-      - name: Run couchbase_columnar unit tests in docker
+      - name: Run couchbase_columnar unit tests
+        if: ${{ matrix.api == 'couchbase' }}
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          cd pycbcc
+          ls -alh
+          python -m pip install -r dev_reqs.txt
+          WHEEL_NAME=$(find . -name '*.whl' | cut -c 3-)
+          echo "WHEEL_NAME=$WHEEL_NAME"
+          python -m pip install $WHEEL_NAME
+          python -m pip list
+          python -m pytest -m 'pycbcc_couchbase and pycbcc_unit' -p no:asyncio -p no:warnings -vv -rA
+      - name: Run couchbase_columnar integration tests
+        if: ${{ inputs.test_input != '' && matrix.api == 'couchbase' }}
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          cd pycbcc
+          ls -alh
+          python -m pip install -r dev_reqs.txt
+          WHEEL_NAME=$(find . -name '*.whl' | cut -c 3-)
+          echo "WHEEL_NAME=$WHEEL_NAME"
+          python -m pip install $WHEEL_NAME
+          python -m pip list
+          python -m pytest -m 'pycbcc_couchbase and pycbcc_integration' -p no:asyncio -p no:warnings -vv -rA
+      - name: Run acouchbase_columnar unit tests
+        if: ${{ matrix.api == 'acouchbase' }}
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          cd pycbcc
+          ls -alh
+          python -m pip install -r dev_reqs.txt
+          WHEEL_NAME=$(find . -name '*.whl' | cut -c 3-)
+          echo "WHEEL_NAME=$WHEEL_NAME"
+          python -m pip install $WHEEL_NAME
+          python -m pip list
+          python -m pytest -m 'pycbcc_acouchbase and pycbcc_unit' -p no:warnings -vv -rA
+      - name: Run acouchbase_columnar integration tests
+        if: ${{ inputs.test_input != '' && matrix.api == 'acouchbase' }}
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          cd pycbcc
+          ls -alh
+          python -m pip install -r dev_reqs.txt
+          WHEEL_NAME=$(find . -name '*.whl' | cut -c 3-)
+          echo "WHEEL_NAME=$WHEEL_NAME"
+          python -m pip install $WHEEL_NAME
+          python -m pip list
+          python -m pytest -m 'pycbcc_acouchbase and pycbcc_integration' -p no:warnings -vv -rA
+
+
+  tests-musllinux:
+    runs-on: ${{ matrix.os }}
+    needs: [validate-input, build-wheels, test-setup]
+    if: |
+      always()
+      && needs.validate-input.result == 'success'
+      && needs.test-setup.result == 'success'
+      && (needs.build-wheels.result == 'success' || needs.build-wheels.result == 'skipped')
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ["ubuntu-22.04"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        api: ["acouchbase", "couchbase"]
+    steps:
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Confirm Python version
+        run: python -c "import sys; print(sys.version)"
+      - name: Download test setup
+        uses: actions/download-artifact@v4
+        with:
+          name: pycbcc-test-setup
+          path: pycbcc
+      - name: Download wheel
+        uses: actions/download-artifact@v4
+        with:
+          name: pycbcc-artifact-musllinux-${{ matrix.os == 'ubuntu-22.04-arm' && 'aarch64' || 'x86_64' }}-python${{ matrix.python-version }}-wheel
+          run-id: ${{ inputs.wheels_run_id != '' && inputs.wheels_run_id || needs.build-wheels.outputs.workflow_run_id }}
+          github-token: ${{ github.token }}
+          path: pycbcc
+      - name: Cache Docker image
+        uses: actions/cache@v4
+        with:
+          path: /tmp/docker_python_image.tar # Path to store the image archive
+          key: docker-image-python-${{ matrix.python-version }}-alpine
+      - name: Pull and save image if not cached
+        run: |
+          if [ ! -f /tmp/docker_python_image.tar ]; then
+            docker pull python:${{ matrix.python-version }}-alpine
+            docker save python:${{ matrix.python-version }}-alpine -o /tmp/docker_python_image.tar
+          fi
+      - name: Load image if cached
+        run: |
+          if [ -f /tmp/docker_python_image.tar ]; then
+            docker load -i /tmp/docker_python_image.tar
+          fi
+      - name: Run couchbase_columnar unit tests in Docker
         if: ${{ matrix.api == 'couchbase' }}
         uses: addnab/docker-run-action@v3
         with:
-          image: python:${{ matrix.python-version }}-slim-bullseye
+          image: python:${{ matrix.python-version }}-alpine
           options: >-
-            --platform linux/${{ matrix.arch == 'aarch64' && 'arm64' || 'amd64'}}
+            --platform linux/${{ matrix.os == 'ubuntu-22.04-arm' && 'arm64' || 'amd64' }}
             -v ${{ github.workspace }}/pycbcc:/pycbcc
           run: |
-            apt-get update && apt-get install -y jq
+            apk update && apk add --no-cache jq
             python -m pip install --upgrade pip setuptools wheel
             cd pycbcc
             ls -alh
@@ -298,16 +392,16 @@ jobs:
             python -m pip install $WHEEL_NAME
             python -m pip list
             python -m pytest -m 'pycbcc_couchbase and pycbcc_unit' -p no:asyncio -p no:warnings -vv -rA
-      - name: Run couchbase_columnar integration tests in docker
+      - name: Run couchbase_columnar integration tests in Docker
         if: ${{ inputs.test_input != '' && matrix.api == 'couchbase' }}
         uses: addnab/docker-run-action@v3
         with:
-          image: python:${{ matrix.python-version }}-slim-bullseye
+          image: python:${{ matrix.python-version }}-alpine
           options: >-
-            --platform linux/${{ matrix.arch == 'aarch64' && 'arm64' || 'amd64'}}
+            --platform linux/${{ matrix.os == 'ubuntu-22.04-arm' && 'arm64' || 'amd64' }}
             -v ${{ github.workspace }}/pycbcc:/pycbcc
           run: |
-            apt-get update && apt-get install -y jq
+            apk update && apk add --no-cache jq
             python -m pip install --upgrade pip setuptools wheel
             cd pycbcc
             ls -alh
@@ -317,16 +411,16 @@ jobs:
             python -m pip install $WHEEL_NAME
             python -m pip list
             python -m pytest -m 'pycbcc_couchbase and pycbcc_integration' -p no:asyncio -p no:warnings -vv -rA
-      - name: Run acouchbase_columnar unit tests in docker
+      - name: Run acouchbase_columnar unit tests in Docker
         if: ${{ matrix.api == 'acouchbase' }}
         uses: addnab/docker-run-action@v3
         with:
-          image: python:${{ matrix.python-version }}-slim-bullseye
+          image: python:${{ matrix.python-version }}-alpine
           options: >-
-            --platform linux/${{ matrix.arch == 'aarch64' && 'arm64' || 'amd64'}}
+            --platform linux/${{ matrix.os == 'ubuntu-22.04-arm' && 'arm64' || 'amd64' }}
             -v ${{ github.workspace }}/pycbcc:/pycbcc
           run: |
-            apt-get update && apt-get install -y jq
+            apk update && apk add --no-cache jq
             python -m pip install --upgrade pip setuptools wheel
             cd pycbcc
             ls -alh
@@ -336,16 +430,16 @@ jobs:
             python -m pip install $WHEEL_NAME
             python -m pip list
             python -m pytest -m 'pycbcc_acouchbase and pycbcc_unit' -p no:warnings -vv -rA
-      - name: Run acouchbase_columnar integration tests in docker
+      - name: Run acouchbase_columnar integration tests in Docker
         if: ${{ inputs.test_input != '' && matrix.api == 'acouchbase' }}
         uses: addnab/docker-run-action@v3
         with:
-          image: python:${{ matrix.python-version }}-slim-bullseye
+          image: python:${{ matrix.python-version }}-alpine
           options: >-
-            --platform linux/${{ matrix.arch == 'aarch64' && 'arm64' || 'amd64'}}
+            --platform linux/${{ matrix.os == 'ubuntu-22.04-arm' && 'arm64' || 'amd64' }}
             -v ${{ github.workspace }}/pycbcc:/pycbcc
           run: |
-            apt-get update && apt-get install -y jq
+            apk update && apk add --no-cache jq
             python -m pip install --upgrade pip setuptools wheel
             cd pycbcc
             ls -alh
@@ -356,120 +450,6 @@ jobs:
             python -m pip list
             python -m pytest -m 'pycbcc_acouchbase and pycbcc_integration' -p no:warnings -vv -rA
 
-  tests-musllinux:
-    runs-on: ubuntu-22.04
-    needs: [validate-input, build-wheels, test-setup]
-    if: |
-      always()
-      && needs.validate-input.result == 'success'
-      && needs.test-setup.result == 'success'
-      && (needs.build-wheels.result == 'success' || needs.build-wheels.result == 'skipped')
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
-        arch: ['x86_64']
-        api: ["acouchbase", "couchbase"]
-    steps:
-      - name: Set up QEMU
-        if: ${{ matrix.arch == 'aarch64' }}
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Confirm Python version
-        run: python -c "import sys; print(sys.version)"
-      - name: Download test setup
-        uses: actions/download-artifact@v4
-        with:
-          name: pycbcc-test-setup
-          path: pycbcc
-      - name: Download wheel
-        uses: actions/download-artifact@v4
-        with:
-          name: pycbcc-artifact-musllinux-${{ matrix.arch }}-python${{ matrix.python-version }}-wheel
-          run-id: ${{ inputs.wheels_run_id != '' && inputs.wheels_run_id || needs.build-wheels.outputs.workflow_run_id }}
-          github-token: ${{ github.token }}
-          path: pycbcc
-      - name: Run couchbase_columnar unit tests in docker
-        if: ${{ matrix.api == 'couchbase' }}
-        uses: addnab/docker-run-action@v3
-        with:
-          image: python:${{ matrix.python-version }}-alpine3.19
-          options: >-
-            --platform linux/${{ matrix.arch == 'aarch64' && 'arm64' || 'amd64'}}
-            -v ${{ github.workspace }}/pycbcc:/pycbcc
-          run: |
-            apk update && apk add --no-cache jq
-            python -m pip install --upgrade pip setuptools wheel
-            cd pycbcc
-            ls -alh
-            python -m pip install -r dev_reqs.txt
-            WHEEL_NAME=$(find . -name '*.whl' | cut -c 3-)
-            echo "WHEEL_NAME=$WHEEL_NAME"
-            python -m pip install $WHEEL_NAME
-            python -m pip list
-            python -m pytest -m 'pycbcc_couchbase and pycbcc_unit' -p no:asyncio -p no:warnings -vv -rA
-      - name: Run couchbase_columnar integration tests in docker
-        if: ${{ inputs.test_input != '' && matrix.api == 'couchbase' }}
-        uses: addnab/docker-run-action@v3
-        with:
-          image: python:${{ matrix.python-version }}-alpine3.19
-          options: >-
-            --platform linux/${{ matrix.arch == 'aarch64' && 'arm64' || 'amd64'}}
-            -v ${{ github.workspace }}/pycbcc:/pycbcc
-          run: |
-            apk update && apk add --no-cache jq
-            python -m pip install --upgrade pip setuptools wheel
-            cd pycbcc
-            ls -alh
-            python -m pip install -r dev_reqs.txt
-            WHEEL_NAME=$(find . -name '*.whl' | cut -c 3-)
-            echo "WHEEL_NAME=$WHEEL_NAME"
-            python -m pip install $WHEEL_NAME
-            python -m pip list
-            python -m pytest -m 'pycbcc_couchbase and pycbcc_integration' -p no:asyncio -p no:warnings -vv -rA
-      - name: Run acouchbase_columnar unit tests in docker
-        if: ${{ matrix.api == 'acouchbase' }}
-        uses: addnab/docker-run-action@v3
-        with:
-          image: python:${{ matrix.python-version }}-alpine3.19
-          options: >-
-            --platform linux/${{ matrix.arch == 'aarch64' && 'arm64' || 'amd64'}}
-            -v ${{ github.workspace }}/pycbcc:/pycbcc
-          run: |
-            apk update && apk add --no-cache jq
-            python -m pip install --upgrade pip setuptools wheel
-            cd pycbcc
-            ls -alh
-            python -m pip install -r dev_reqs.txt
-            WHEEL_NAME=$(find . -name '*.whl' | cut -c 3-)
-            echo "WHEEL_NAME=$WHEEL_NAME"
-            python -m pip install $WHEEL_NAME
-            python -m pip list
-            python -m pytest -m 'pycbcc_acouchbase and pycbcc_unit' -p no:warnings -vv -rA
-      - name: Run acouchbase_columnar integration tests in docker
-        if: ${{ inputs.test_input != '' && matrix.api == 'acouchbase' }}
-        uses: addnab/docker-run-action@v3
-        with:
-          image: python:${{ matrix.python-version }}-alpine3.19
-          options: >-
-            --platform linux/${{ matrix.arch == 'aarch64' && 'arm64' || 'amd64'}}
-            -v ${{ github.workspace }}/pycbcc:/pycbcc
-          run: |
-            apk update && apk add --no-cache jq
-            python -m pip install --upgrade pip setuptools wheel
-            cd pycbcc
-            ls -alh
-            python -m pip install -r dev_reqs.txt
-            WHEEL_NAME=$(find . -name '*.whl' | cut -c 3-)
-            echo "WHEEL_NAME=$WHEEL_NAME"
-            python -m pip install $WHEEL_NAME
-            python -m pip list
-            python -m pytest -m 'pycbcc_acouchbase and pycbcc_integration' -p no:warnings -vv -rA
 
   tests-macos:
     needs: [validate-input, build-wheels, test-setup]
